gap-solved

--- a/css/footer.css
+++ b/css/footer.css
@@ -1,8 +1,9 @@
 .footer {
+    margin: 0;
     background: #222;
     color: white;
     padding-bottom: 10vh;
-    width: 100%;
+    
 }
 
 
@@ -17,7 +18,7 @@
 .footer__info{
     position: relative;
     top: 10px;
-    left: 10px;
+    margin-left: 10px;
 }
 
 .footer__copy{
